# rust-web-server-experiment

./: .env  .talismanrc  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  haproxy.cfg
proto/: user.proto
src/: client.rs  db.rs  main.rs  pages.rs  test.rs
src/grpc/: mod.rs
src/grpc/proto/: user.rs
src/grpc/services/: user.rs
src/models/: mod.rs  product.rs  user.rs
src/routes/: mod.rs  products.rs  users.rs
src/schemas/: mod.rs  product.rs  simple_message.rs  user.rs
src/services/: mod.rs  products.rs  users.rs
