[package]
name = "rust_web_server"
version = "0.1.0"
edition = "2024"
default-run = "server"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "experiment"
path = "src/test.rs"

[dependencies]
# Axum Server
axum = { version = "0.8.1", features = ["macros"] } # web server
tokio = { version = "1.0", features = ["full"] } # async runtime
serde = { version = "1.0", features = [
    "derive",
] } # serialization/deserialization
dotenv = "0.15" # autoload environment variables
uuid = { version = "1.10", features = ["v4"] } # UUID
sea-orm = { version = "1.1.7", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] } # ORM (diesel alternative)
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Actix-web Server


# gRPC Server
tonic = "0.12.3" # gRPC library
tonic-reflection = "0.12.3" # gRPC reflection
prost = "0.13" # Protobuf library

[build-dependencies]
tonic-build = "0.12.3" # Protobuf compiler
